--- a/.github/workflows/marvin-tests.yml
+++ b/.github/workflows/marvin-tests.yml
@@ -23,7 +23,7 @@ jobs:
       run: mvn clean verify
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v4  #codecov/codecov-action@v4
       with:
         files: target/site/jacoco/jacoco.xml
         token: ${{ secrets.CODECOV_TOKEN }}  # Add this in GitHub Secrets
